@@ -3,15 +3,19 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>502 196 374 303 0 0 1440 878 </string>
+	<string>402 180 374 303 0 0 1440 878 </string>
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>26</key>
-		<string>216 463 592 70 0 0 1024 746 </string>
+		<string>178 632 592 70 0 0 1440 878 </string>
 	</dict>
 	<key>IBFramework Version</key>
-	<string>364.0</string>
+	<string>439.0</string>
+	<key>IBOpenObjects</key>
+	<array>
+		<integer>26</integer>
+	</array>
 	<key>IBSystem Version</key>
-	<string>7W98</string>
+	<string>8C46</string>
 </dict>
 </plist>
