@@ -20,6 +20,9 @@ Wishlist Items
 - Spotlight support. (2.1)
 - Export groups vs. flat export.
 - Change dock unread count colour and size. (2.1)
+- Single article list and viewer interface (as in Bloglines).
+- Bonjour support. (2.1)
+- Synchronisation via .Mac or FTP. (2.1)
 
 Coding To-Do Items
 ==================
